<resources>
    <string name="Byte_short">B</string>
    <string name="ExaByte_short">EB</string>
    <string name="GigaByte_short">GB</string>
    <string name="KiloByte_short">KB</string>
    <string name="MegaByte_short">MB</string>
    <string name="PetaByte_short">PB</string>
    <string name="SNACKBAR_HINTS_ENABLED">false</string>
    <string name="TeraByte_short">TB</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="add_look_choose_image">Select Image</string>
    <string name="add_look_draw_new_image">Draw Image</string>
    <string name="add_look_from_camera">Take Picture</string>
    <string name="add_look_media_library">Media Library</string>
    <string name="agree">Agree</string>
    <string name="brick_set_gravity_to">"Set gravity for all objects to "</string>
    <string name="brick_set_gravity_unit">steps/second²</string>
    <string name="dialog_privacy_policy_text">"To offer you all the benefits of our services and the associated account, it is necessary to collect certain data from you.

 • To maintain and improve our services (apps and websites) and to do scientific research on ICT and STEM/STEAM education, we use Google Analytics, Crashlytics, and Firebase, all by Google LLC (USA), to get metadata about the usage of our services, e.g., crash information, timestamps, visited pages/screens, usage of our apps and services, used operating system, and information about the network provider. This analysis and the collected data is not linked to your profile and does not contain any personal information (last bits of the IP address get anonymized). However, the collected data will get transferred to the service-provider (Google LLC, USA). Data processing is based on an agreement with Google LLC. This relationship to the service provider conforms to the European Union's General Data Protection Regulation (EU GDPR) and EU-USA Privacy Shield agreement.

 • To create and use an account in our systems, and to inform you about necessary changes about your account per e-mail, e.g., updates or violations of our Terms of Use and Service, our community rules, or our policies, we will store your username and, if provided by you, your e-mail address. If you have connected your account via Google Plus or Facebook, we additionally store an identification key connected to your account on these services. We will not use this data for any other (e.g., marketing) purposes, unless you explicitly allowed us to do so.

 • On a voluntary basis, you can give us your country of residence through your account page on the sharing site. This will get displayed on your public profile and only be used for statistical and research purposes by us. It can be removed at any time in your profile settings.

 • You can withdraw the usage of the personal data belonging to your account at any time by deleting your account through your profile page on https://share.catrob.at. After deleting your account you will still be able to use the provided services, but not to collaborate, e.g., through uploading programs, commenting, or liking. Also, all provided content linked to your account, e.g., uploaded programs, comments, etc., will be deleted.

 • To avoid misuse of our services, e.g., through user contributed uploads or comments for illegal purposes, all user generated public data (uploads, comments) will be stored internally in a database, together with a timestamp and the used internet address. This data will not be used by or forwarded to any institutions, unless sufficiently illegal actions are reasonably suspected and officially entitled legal institutions request it based on applicable law. Each case will be thoroughly checked on an individual basis by us first.

 • You can voluntarily subscribe to the Catrobat Newsletter, on https://catrob.at/newsletter provided by us through the MailChimp service (The Rocket Science Group LLC d/b/a MailChimp, USA). You will then receive updates on the Catrobat project and its services to your provided e-mail address. You can withdraw the newsletter at any time by using the unsubscribe link in the footer of every newsletter. This newsletter is provided by MailChimp with whom we do have a data-processing agreement and who committed to the EU General Data Protection Regulation and EU-USA Privacy Shield. For further details on MailChimp please also look up MailChimp's Privacy Policy and Terms of Use.

 • All Services are provided by the free open source Catrobat project under the umbrella of the International Catrobat Association – Verein zur Förderung freier Software, a non-profit NGO incorporated in Graz, Austria (European Union). Our policies pay respect to EU and Austrian data protection law (GDPR). To get in touch with us, please send an e-mail to contact@catrobat.org or mail us to Catrobat,
 c/o
 Institute of Software Technology,
 Graz University of Technology,
 Inffeldgasse 16b,
 A-8010 Graz, Austria
 (European Union).

 In case you are below the age of 14, this policy must be accepted by a legal guardian (usually a parent).

 Catrobat's official English language privacy policy is available on the web under https://catrob.at/privacypolicy.

 Version 2.1, 25 June 2018

 Find the previous, outdated, version of our privacy policy (2.0) here: http://developer.catrobat.org/privacy_policy_2-0"</string>
    <string name="disagree">Disagree</string>
    <string name="disclaimer_privacy_police_header_headline">Welcome!</string>
    <string name="disclaimer_privacy_policy_header">Before you can start coding, please read and accept our Privacy Policy to use the app:</string>
    <string name="formula_editor_bracket_close">)</string>
    <string name="formula_editor_bracket_open">(</string>
    <string name="formula_editor_compute">Compute</string>
    <string name="formula_editor_data">Data</string>
    <string name="formula_editor_decimal_mark">.</string>
    <string name="formula_editor_device">Device</string>
    <string name="formula_editor_functions">Functions</string>
    <string name="formula_editor_image_button_description_delete">delete</string>
    <string name="formula_editor_logic">Logic</string>
    <string name="formula_editor_logic_equal">=</string>
    <string name="formula_editor_object">Object</string>
    <string name="formula_editor_operator_divide">÷</string>
    <string name="formula_editor_operator_minus">-</string>
    <string name="formula_editor_operator_mult">×</string>
    <string name="formula_editor_operator_plus">+</string>
    <string name="formula_editor_string">Abc</string>
    <string name="login">Login</string>
    <string name="number_0">0</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="nxt_play_tone">Play NXT tone</string>
    <string name="nxt_tone_duration">Duration</string>
    <string name="nxt_tone_frequency">Frequency</string>
    <string name="nxt_tone_hundred_hz">×100Hz</string>
    <string name="ok">OK</string>
    <string name="preference_description_accessibility">"Change the app's appearance"</string>
    <string name="preference_description_arduino_bricks">Allow the app to control Arduino boards</string>
    <string name="preference_description_cast_feature_globally_enabled">Show cast button and enable cast projects</string>
    <string name="preference_description_crash_reports">Allow the app to send crash reports automatically</string>
    <string name="preference_description_embroidery_bricks">Create patterns for stitching machines</string>
    <string name="preference_description_hints">Enable to show hints</string>
    <string name="preference_description_jumpingsumo_bricks">"Allow the app to control Parrot's Jumping Sumo"</string>
    <string name="preference_description_language">"Set the app's language"</string>
    <string name="preference_description_mindstorms_ev3_bricks">Allow the app to control Lego Mindstorms EV3 robots</string>
    <string name="preference_description_mindstorms_nxt_bricks">Allow the app to control Lego Mindstorms NXT robots</string>
    <string name="preference_description_nfc_bricks">Allow the app to use NFC tags in programs</string>
    <string name="preference_description_phiro_bricks">Allow the app to control Phiro robots</string>
    <string name="preference_description_quadcopter_bricks">Allow the app to control AR.Drone 2.0 quadcopters</string>
    <string name="preference_description_raspi_bricks">Allow the app to control Raspberry Pi computers</string>
    <string name="preference_title_accessibility">Accessibility</string>
    <string name="preference_title_cast_feature_globally_enabled">Enable cast features</string>
    <string name="preference_title_enable_arduino_bricks">Arduino bricks</string>
    <string name="preference_title_enable_crash_reports">Sending anonymous crash reports</string>
    <string name="preference_title_enable_embroidery_bricks">Embroidery</string>
    <string name="preference_title_enable_hints">Show hints</string>
    <string name="preference_title_enable_jumpingsumo_bricks">Parrot Jumping Sumo Bricks</string>
    <string name="preference_title_enable_mindstorms_ev3_bricks">Lego Mindstorms EV3 Bricks</string>
    <string name="preference_title_enable_mindstorms_nxt_bricks">Lego Mindstorms NXT Bricks</string>
    <string name="preference_title_enable_nfc_bricks">Near Field Communication</string>
    <string name="preference_title_enable_phiro_bricks">Phiro Bricks</string>
    <string name="preference_title_enable_quadcopter_bricks">Parrot AR.Drone 2.0 Bricks</string>
    <string name="preference_title_enable_raspi_bricks">Raspberry Pi Bricks</string>
    <string name="preference_title_language">Language</string>
    <string name="register">Register</string>
    <string name="register_code_terms_of_use_text">Terms of Use and Services</string>
    <string name="register_terms">By registering you agree to our</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="stage_dialog_axes_on">Axes on</string>
    <string name="stage_dialog_back">Back</string>
    <string name="stage_dialog_maximize">"Maximize/
Stretch"</string>
    <string name="stage_dialog_restart">Restart</string>
    <string name="stage_dialog_resume">Resume</string>
    <string name="stage_dialog_screenshot">Preview</string>
    <string name="x_label">"X: "</string>
    <string name="y_label">"Y: "</string>
</resources>