<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <CheckBox android:gravity="center_vertical" android:id="@id/brick_checkbox" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    <org.catrobat.catroid.ui.BrickLayout android:orientation="horizontal" android:id="@id/brick_set_gravity_layout" android:paddingTop="0.0dip" android:paddingBottom="0.0dip" app:horizontalSpacing="@dimen/brick_flow_layout_horizontal_spacing" app:verticalSpacing="@dimen/brick_flow_layout_vertical_spacing" style="@style/BrickContainer.Motion.Big">
        <include layout="@layout/icon_brick_category_motion" />
        <TextView android:id="@id/brick_set_gravity_label" android:text="@string/brick_set_gravity_to" style="@style/BrickText.SingleLine" />
        <TextView android:id="@id/brick_set_gravity_x_textview" android:text="@string/x_label" app:layout_newLine="true" style="@style/BrickText.SingleLine" />
        <TextView android:id="@id/brick_set_gravity_edit_text_x" app:layout_inputType="number" app:layout_textField="true" style="@style/BrickEditText" />
        <TextView android:id="@id/brick_set_gravity_y_textview" android:text="@string/y_label" style="@style/BrickText.SingleLine" />
        <TextView android:id="@id/brick_set_gravity_edit_text_y" app:layout_inputType="number" app:layout_textField="true" style="@style/BrickEditText" />
        <TextView android:id="@id/brick_set_gravity_unit" android:text="@string/brick_set_gravity_unit" style="@style/BrickText.SingleLine" />
    </org.catrobat.catroid.ui.BrickLayout>
</LinearLayout>