<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <CheckBox android:gravity="center_vertical" android:id="@id/brick_checkbox" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    <org.catrobat.catroid.ui.BrickLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/brick_nxt_play_tone_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" app:horizontalSpacing="@dimen/brick_flow_layout_horizontal_spacing" app:verticalSpacing="@dimen/brick_flow_layout_vertical_spacing" style="@style/BrickContainer.Lego.Big">
        <include layout="@layout/icon_brick_category_legonxt" />
        <TextView android:text="@string/nxt_play_tone" style="@style/BrickText.SingleLine" />
        <TextView android:text="@string/nxt_tone_duration" app:layout_newLine="true" style="@style/BrickText.Multiple" />
        <TextView android:id="@id/nxt_tone_duration_edit_text" app:layout_inputType="number" app:layout_textField="true" style="@style/BrickEditText" />
        <TextView android:id="@id/brick_seconds_label" style="@style/BrickText.Multiple" />
        <TextView android:text="@string/nxt_tone_frequency" app:layout_newLine="true" style="@style/BrickText.Multiple" />
        <TextView android:id="@id/nxt_tone_freq_edit_text" app:layout_inputType="number" app:layout_textField="true" style="@style/BrickEditText" />
        <TextView android:text="@string/nxt_tone_hundred_hz" style="@style/BrickText.SingleLine" />
    </org.catrobat.catroid.ui.BrickLayout>
</LinearLayout>