<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:paddingTop="@dimen/dialog_content_area_padding_top" android:paddingBottom="@dimen/dialog_content_area_padding_top" android:layout_width="fill_parent" android:layout_height="fill_parent" android:paddingStart="@dimen/dialog_content_area_padding" android:paddingEnd="@dimen/dialog_content_area_padding"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TableLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:shrinkColumns="*">
        <TableRow android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:textSize="?medium" android:gravity="center" android:id="@id/dialog_new_look_paintroid" android:background="@drawable/new_object_dialog_selector" android:text="@string/add_look_draw_new_image" android:drawableTop="@drawable/ic_paintroid" />
            <TextView android:textSize="?medium" android:gravity="center" android:id="@id/dialog_new_look_media_library" android:background="@drawable/new_object_dialog_selector" android:text="@string/add_look_media_library" android:drawableTop="@drawable/ic_media_library" />
        </TableRow>
        <TableRow android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:textSize="?medium" android:gravity="center" android:id="@id/dialog_new_look_gallery" android:background="@drawable/new_object_dialog_selector" android:text="@string/add_look_choose_image" android:drawableTop="@drawable/ic_gallery" />
            <TextView android:textSize="?medium" android:gravity="center" android:id="@id/dialog_new_look_camera" android:background="@drawable/new_object_dialog_selector" android:text="@string/add_look_from_camera" android:drawableTop="@drawable/ic_camera" />
        </TableRow>
    </TableLayout>
</ScrollView>