<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_gravity="bottom|center" android:orientation="horizontal" android:id="@id/stage_layout_relative" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/stage_dialog_menu" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/stage_dialog_background_middle" android:scaleType="fitXY" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" />
    <LinearLayout android:orientation="horizontal" android:id="@id/stage_layout_linear" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:layout_alignTop="@id/stage_dialog_menu" android:layout_alignStart="@id/stage_dialog_menu" android:layout_alignEnd="@id/stage_dialog_menu">
        <Button android:textColor="@color/accent" android:id="@id/stage_dialog_button_back" android:text="@string/stage_dialog_back" android:drawableTop="@drawable/stage_dialog_button_back_selector" style="@style/StageButton" />
        <Button android:textColor="@color/accent" android:id="@id/stage_dialog_button_restart" android:text="@string/stage_dialog_restart" android:drawableTop="@drawable/stage_dialog_button_restart_selector" style="@style/StageButton" />
        <Button android:textColor="@color/accent" android:id="@id/stage_dialog_button_continue" android:layout_width="0.0dip" android:text="@string/stage_dialog_resume" android:drawableTop="@drawable/stage_dialog_button_continue_selector" android:layout_weight="2.0" style="@style/StageButton" />
        <Button android:textColor="@color/accent" android:id="@id/stage_dialog_button_screenshot" android:text="@string/stage_dialog_screenshot" android:drawableTop="@drawable/stage_dialog_button_screenshot_selector" style="@style/StageButton" />
        <Button android:textColor="@color/accent" android:id="@id/stage_dialog_button_toggle_axes" android:text="@string/stage_dialog_axes_on" android:drawableTop="@drawable/stage_dialog_button_toggle_axis_selector" style="@style/StageButton" />
    </LinearLayout>
    <ImageView android:id="@id/stage_dialog_menu_side_left" android:background="@drawable/stage_dialog_background_side" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignTop="@id/stage_dialog_menu" android:layout_toStartOf="@id/stage_dialog_menu" />
    <ImageView android:id="@id/stage_dialog_menu_side_right" android:background="@drawable/stage_dialog_background_side" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignTop="@id/stage_dialog_menu" android:layout_toEndOf="@id/stage_dialog_menu" />
    <ImageButton android:id="@id/stage_dialog_button_maximize" android:background="@color/stage_dialog_maximize_button_background" android:layout_width="@dimen/dialog_image_button_layout_width_height" android:layout_height="@dimen/dialog_image_button_layout_width_height" android:layout_margin="20.0dip" android:src="@drawable/stage_dialog_button_stretch_selector" android:layout_alignParentTop="true" android:contentDescription="@string/stage_dialog_maximize" android:layout_alignParentEnd="true" style="@style/StageButton" />
</RelativeLayout>